feat: :sparkles: Adding the swagger documentation
